--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
 <div class="campo">
-    <label for="senioridade"><strong>Senioridade</strong></label>
+    <label for="senioridade"><strong>Level</strong></label>
     <select name="" id="senioridade" required>
         <option selected disabled value="">Choice</option>
         <option value="">Junior</option>
